# walk-the-dog

./: .gitignore  README.md  angular.json  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  styles.css
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts
src/lib/wtd-rust/: Cargo.toml
src/lib/wtd-rust/src/: browser.rs  engine.rs  game.rs  lib.rs  obstacle.rs  rhb.rs  rhb_state_machine.rs  rhb_states.rs  segments.rs  sound.rs  wtd_state_machine.rs
src/lib/wtd-rust/tests/: integration_test.rs
